// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccordionMenuItem > should not render hidden sub list items 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkzCjb dzAHpt"
      data-state="open"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gsnScm cCgoww sc-eCYdKt jglsMO"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
            fill="#F9C000"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
    <ul
      class="sc-hKMtDE gleKFx"
    />
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should not render if hidden 1`] = `<DocumentFragment />`;

exports[`AccordionMenuItem > should render correctly with sub list 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
  >
    <a
      class="sc-bczSft fiULbX"
      data-rc="Link"
      target="_self"
    >
      <div
        class="sc-gKXNOb jeAieT"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should render correctly with sub list 2`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkzCjb dzAHpt"
      data-state="closed"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gsnScm cCgoww sc-eCYdKt jglsMO"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
            fill="#F9C000"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should render with data attributes 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
    data-test="test-attribute"
  >
    <a
      class="sc-bczSft fiULbX"
      data-rc="Link"
      target="_self"
    >
      <div
        class="sc-gKXNOb jeAieT"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should render with link 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
  >
    <a
      class="sc-bczSft fiULbX"
      data-rc="Link"
      href="/example-link"
      target="_self"
    >
      <div
        class="sc-gKXNOb jeAieT"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem > should toggle the sub list on click 1`] = `
<DocumentFragment>
  <li
    class="sc-jSMdHm iQpfTW"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkzCjb dzAHpt"
      data-state="closed"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gsnScm cCgoww sc-eCYdKt jglsMO"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg
          height="7"
          viewBox="0 0 12 7"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.406.252l-5.16 5.28a.874.874 0 0 0 0 1.216.827.827 0 0 0 1.189 0L6 2.076l4.565 4.672a.827.827 0 0 0 1.189 0 .874.874 0 0 0 0-1.216L6.594.252a.828.828 0 0 0-1.188 0z"
            fill="#F9C000"
            fill-rule="nonzero"
          />
        </svg>
      </span>
    </button>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should not render hidden sub list items 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkrFOg fidVCs"
      data-state="open"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gswNZR iagQga sc-eDvSVe fjnYyG"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg>
          chevron-yellow.svg
        </svg>
      </span>
    </button>
    <ul
      class="sc-hLBbgP bzkRai"
    />
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should not render if hidden 1`] = `<DocumentFragment />`;

exports[`AccordionMenuItem should render correctly with sub list 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
  >
    <a
      class="sc-bcXHqe bcuffv"
      data-rc="Link"
      target="_self"
    >
      <div
        class="sc-gKPRtg bWvUsp"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should render correctly with sub list 2`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkrFOg fidVCs"
      data-state="closed"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gswNZR iagQga sc-eDvSVe fjnYyG"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg>
          chevron-yellow.svg
        </svg>
      </span>
    </button>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should render with data attributes 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
    data-test="test-attribute"
  >
    <a
      class="sc-bcXHqe bcuffv"
      data-rc="Link"
      target="_self"
    >
      <div
        class="sc-gKPRtg bWvUsp"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should render with link 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
  >
    <a
      class="sc-bcXHqe bcuffv"
      data-rc="Link"
      href="/example-link"
      target="_self"
    >
      <div
        class="sc-gKPRtg bWvUsp"
      >
        Link text
      </div>
    </a>
  </li>
</DocumentFragment>
`;

exports[`AccordionMenuItem should toggle the sub list on click 1`] = `
<DocumentFragment>
  <li
    class="sc-jSUZER eVVLfZ"
    data-rc="AccordionMenuItem"
  >
    <button
      class="sc-dkrFOg fidVCs"
      data-state="closed"
    >
      Link text
      <span
        aria-hidden="true"
        class="sc-gswNZR iagQga sc-eDvSVe fjnYyG"
        data-rc="LargeSystemIcon.ChevronYellow"
      >
        <svg>
          chevron-yellow.svg
        </svg>
      </span>
    </button>
  </li>
</DocumentFragment>
`;
